persistent layer + new features
